src/parse/pascal/PasDocParser.py
# Generated from gramm/pascal/PasDocParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PasDocParser ( Parser ):

    grammarFileName = "PasDocParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'..'", "'-'", "'+'", "'('", "')'", "'['", 
                     "']'", "'<'", "'>'", "';'", "':'", "','", "'.'", "'='", 
                     "'^'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "BEGIN", "UNIT", "INTERFACE", 
                      "IMPLEMENTATION", "USES", "CONST", "TYPE", "VAR", 
                      "CLASS", "RECORD", "ARRAY", "SET", "OF", "END", "PUBLIC", 
                      "PRIVATE", "PROTECTED", "PUBLISHED", "PROCEDURE", 
                      "FUNCTION", "CONSTRUCTOR", "DESTRUCTOR", "PROPERTY", 
                      "VIRTUAL", "OVERRIDE", "ABSTRACT", "STATIC", "OVERLOAD", 
                      "REINTRODUCE", "READ", "WRITE", "IDENT", "STRING", 
                      "NUMBER", "DOC_COMMENT", "LINE_COMMENT", "BRACE_COMMENT", 
                      "PAREN_COMMENT", "WS", "DOTDOT", "MINUS", "PLUS", 
                      "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LT", "GT", 
                      "SEMI", "COLON", "COMMA", "DOT", "EQ", "CARET", "OTHER" ]

    RULE_unitFile = 0
    RULE_programHeader = 1
    RULE_unitHeader = 2
    RULE_unitSection = 3
    RULE_interfaceSection = 4
    RULE_implementationSection = 5
    RULE_usesSection = 6
    RULE_usesItem = 7
    RULE_declaration = 8
    RULE_implementationMethod = 9
    RULE_qualifiedIdent = 10
    RULE_methodBody = 11
    RULE_methodBodyToken = 12
    RULE_varSection = 13
    RULE_varDeclaration = 14
    RULE_constSection = 15
    RULE_constDeclaration = 16
    RULE_constItem = 17
    RULE_constValue = 18
    RULE_sign = 19
    RULE_docComment = 20
    RULE_typeSection = 21
    RULE_typeDeclaration = 22
    RULE_unknownTypeDeclaration = 23
    RULE_unknownTypeToken = 24
    RULE_classDeclaration = 25
    RULE_classType = 26
    RULE_classBaseList = 27
    RULE_classBody = 28
    RULE_classMember = 29
    RULE_recordDeclaration = 30
    RULE_recordType = 31
    RULE_recordBody = 32
    RULE_recordMember = 33
    RULE_arrayDeclaration = 34
    RULE_arrayType = 35
    RULE_arrayIndex = 36
    RULE_setDeclaration = 37
    RULE_setType = 38
    RULE_enumDeclaration = 39
    RULE_enumType = 40
    RULE_enumItemTail = 41
    RULE_enumItem = 42
    RULE_visibilitySection = 43
    RULE_visibility = 44
    RULE_methodDeclaration = 45
    RULE_methodDirectiveList = 46
    RULE_methodKind = 47
    RULE_parameterList = 48
    RULE_parameterDecl = 49
    RULE_parameterItem = 50
    RULE_parameterModifier = 51
    RULE_returnType = 52
    RULE_methodDirective = 53
    RULE_propertyDeclaration = 54
    RULE_propertyAccessor = 55
    RULE_fieldDeclaration = 56
    RULE_interfaceDeclaration = 57
    RULE_interfaceBaseList = 58
    RULE_interfaceBody = 59
    RULE_interfaceMember = 60
    RULE_genericParams = 61
    RULE_typeName = 62
    RULE_genericTypeArgs = 63
    RULE_otherToken = 64

    ruleNames =  [ "unitFile", "programHeader", "unitHeader", "unitSection", 
                   "interfaceSection", "implementationSection", "usesSection", 
                   "usesItem", "declaration", "implementationMethod", "qualifiedIdent", 
                   "methodBody", "methodBodyToken", "varSection", "varDeclaration", 
                   "constSection", "constDeclaration", "constItem", "constValue", 
                   "sign", "docComment", "typeSection", "typeDeclaration", 
                   "unknownTypeDeclaration", "unknownTypeToken", "classDeclaration", 
                   "classType", "classBaseList", "classBody", "classMember", 
                   "recordDeclaration", "recordType", "recordBody", "recordMember", 
                   "arrayDeclaration", "arrayType", "arrayIndex", "setDeclaration", 
                   "setType", "enumDeclaration", "enumType", "enumItemTail", 
                   "enumItem", "visibilitySection", "visibility", "methodDeclaration", 
                   "methodDirectiveList", "methodKind", "parameterList", 
                   "parameterDecl", "parameterItem", "parameterModifier", 
                   "returnType", "methodDirective", "propertyDeclaration", 
                   "propertyAccessor", "fieldDeclaration", "interfaceDeclaration", 
                   "interfaceBaseList", "interfaceBody", "interfaceMember", 
                   "genericParams", "typeName", "genericTypeArgs", "otherToken" ]

    EOF = Token.EOF
    PROGRAM=1
    BEGIN=2
    UNIT=3
    INTERFACE=4
    IMPLEMENTATION=5
    USES=6
    CONST=7
    TYPE=8
    VAR=9
    CLASS=10
    RECORD=11
    ARRAY=12
    SET=13
    OF=14
    END=15
    PUBLIC=16
    PRIVATE=17
    PROTECTED=18
    PUBLISHED=19
    PROCEDURE=20
    FUNCTION=21
    CONSTRUCTOR=22
    DESTRUCTOR=23
    PROPERTY=24
    VIRTUAL=25
    OVERRIDE=26
    ABSTRACT=27
    STATIC=28
    OVERLOAD=29
    REINTRODUCE=30
    READ=31
    WRITE=32
    IDENT=33
    STRING=34
    NUMBER=35
    DOC_COMMENT=36
    LINE_COMMENT=37
    BRACE_COMMENT=38
    PAREN_COMMENT=39
    WS=40
    DOTDOT=41
    MINUS=42
    PLUS=43
    LPAREN=44
    RPAREN=45
    LBRACK=46
    RBRACK=47
    LT=48
    GT=49
    SEMI=50
    COLON=51
    COMMA=52
    DOT=53
    EQ=54
    CARET=55
    OTHER=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class UnitFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PasDocParser.EOF, 0)

        def docComment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PasDocParser.DocCommentContext)
            else:
                return self.getTypedRuleContext(PasDocParser.DocCommentContext,i)


        def programHeader(self):
            return self.getTypedRuleContext(PasDocParser.ProgramHeaderContext,0)


        def unitHeader(self):
            return self.getTypedRuleContext(PasDocParser.UnitHeaderContext,0)


        def unitSection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PasDocParser.UnitSectionContext)
            else:
                return self.getTypedRuleContext(PasDocParser.UnitSectionContext,i)


        def getRuleIndex(self):
            return PasDocParser.RULE_unitFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnitFile" ):
                listener.enterUnitFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnitFile" ):
                listener.exitUnitFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnitFile" ):
                return visitor.visitUnitFile(self)
            else:
                return visitor.visitChildren(self)




    def unitFile(self):

        localctx = PasDocParser.UnitFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_unitFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 130
                    self.docComment() 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 136
                self.programHeader()


            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 139
                self.unitHeader()


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 143255498847747062) != 0):
                self.state = 142
                self.unitSection()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(PasDocParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(PasDocParser.PROGRAM, 0)

        def IDENT(self):
            return self.getToken(PasDocParser.IDENT, 0)

        def SEMI(self):
            return self.getToken(PasDocParser.SEMI, 0)

        def getRuleIndex(self):
            return PasDocParser.RULE_programHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramHeader" ):
                listener.enterProgramHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramHeader" ):
                listener.exitProgramHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramHeader" ):
                return visitor.visitProgramHeader(self)
            else:
                return visitor.visitChildren(self)




    def programHeader(self):

        localctx = PasDocParser.ProgramHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(PasDocParser.PROGRAM)
            self.state = 151
            self.match(PasDocParser.IDENT)
            self.state = 152
            self.match(PasDocParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNIT(self):
            return self.getToken(PasDocParser.UNIT, 0)

        def IDENT(self):
            return self.getToken(PasDocParser.IDENT, 0)

        def SEMI(self):
            return self.getToken(PasDocParser.SEMI, 0)

        def getRuleIndex(self):
            return PasDocParser.RULE_unitHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnitHeader" ):
                listener.enterUnitHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnitHeader" ):
                listener.exitUnitHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnitHeader" ):
                return visitor.visitUnitHeader(self)
            else:
                return visitor.visitChildren(self)




    def unitHeader(self):

        localctx = PasDocParser.UnitHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_unitHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(PasDocParser.UNIT)
            self.state = 155
            self.match(PasDocParser.IDENT)
            self.state = 156
            self.match(PasDocParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interfaceSection(self):
            return self.getTypedRuleContext(PasDocParser.InterfaceSectionContext,0)


        def implementationSection(self):
            return self.getTypedRuleContext(PasDocParser.ImplementationSectionContext,0)


        def declaration(self):
            return self.getTypedRuleContext(PasDocParser.DeclarationContext,0)


        def getRuleIndex(self):
            return PasDocParser.RULE_unitSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnitSection" ):
                listener.enterUnitSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnitSection" ):
                listener.exitUnitSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnitSection" ):
                return visitor.visitUnitSection(self)
            else:
                return visitor.visitChildren(self)




    def unitSection(self):

        localctx = PasDocParser.UnitSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_unitSection)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.interfaceSection()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.implementationSection()
                pass
            elif token in [1, 2, 6, 7, 8, 9, 11, 12, 13, 14, 15, 20, 21, 22, 23, 33, 34, 35, 36, 41, 44, 45, 46, 47, 50, 51, 52, 53, 54, 55, 56]:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERFACE(self):
            return self.getToken(PasDocParser.INTERFACE, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PasDocParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(PasDocParser.DeclarationContext,i)


        def getRuleIndex(self):
            return PasDocParser.RULE_interfaceSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceSection" ):
                listener.enterInterfaceSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceSection" ):
                listener.exitInterfaceSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceSection" ):
                return visitor.visitInterfaceSection(self)
            else:
                return visitor.visitChildren(self)




    def interfaceSection(self):

        localctx = PasDocParser.InterfaceSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_interfaceSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(PasDocParser.INTERFACE)
            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 164
                    self.declaration() 
                self.state = 169
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImplementationSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPLEMENTATION(self):
            return self.getToken(PasDocParser.IMPLEMENTATION, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PasDocParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(PasDocParser.DeclarationContext,i)


        def getRuleIndex(self):
            return PasDocParser.RULE_implementationSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplementationSection" ):
                listener.enterImplementationSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplementationSection" ):
                listener.exitImplementationSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplementationSection" ):
                return visitor.visitImplementationSection(self)
            else:
                return visitor.visitChildren(self)




    def implementationSection(self):

        localctx = PasDocParser.ImplementationSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_implementationSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(PasDocParser.IMPLEMENTATION)
            self.state = 174
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 171
                    self.declaration() 
                self.state = 176
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsesSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USES(self):
            return self.getToken(PasDocParser.USES, 0)

        def usesItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PasDocParser.UsesItemContext)
            else:
                return self.getTypedRuleContext(PasDocParser.UsesItemContext,i)


        def SEMI(self):
            return self.getToken(PasDocParser.SEMI, 0)

        def docComment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PasDocParser.DocCommentContext)
            else:
                return self.getTypedRuleContext(PasDocParser.DocCommentContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PasDocParser.COMMA)
            else:
                return self.getToken(PasDocParser.COMMA, i)

        def getRuleIndex(self):
            return PasDocParser.RULE_usesSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsesSection" ):
                listener.enterUsesSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsesSection" ):
                listener.exitUsesSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsesSection" ):
                return visitor.visitUsesSection(self)
            else:
                return visitor.visitChildren(self)




    def usesSection(self):

        localctx = PasDocParser.UsesSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_usesSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(PasDocParser.USES)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 178
                self.docComment()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 184
            self.usesItem()
            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==52:
                self.state = 185
                self.match(PasDocParser.COMMA)
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==36:
                    self.state = 186
                    self.docComment()
                    self.state = 191
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 192
                self.usesItem()
                self.state = 197
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 198
            self.match(PasDocParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsesItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(PasDocParser.IDENT, 0)

        def docComment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PasDocParser.DocCommentContext)
            else:
                return self.getTypedRuleContext(PasDocParser.DocCommentContext,i)


        def getRuleIndex(self):
            return PasDocParser.RULE_usesItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsesItem" ):
                listener.enterUsesItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsesItem" ):
                listener.exitUsesItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsesItem" ):
                return visitor.visitUsesItem(self)
            else:
                return visitor.visitChildren(self)




    def usesItem(self):

        localctx = PasDocParser.UsesItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_usesItem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self.match(PasDocParser.IDENT)
            self.state = 204
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 201
                self.docComment()
                self.state = 206
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def docComment(self):
            return self.getTypedRuleContext(PasDocParser.DocCommentContext,0)


        def usesSection(self):
            return self.getTypedRuleContext(PasDocParser.UsesSectionContext,0)


        def constSection(self):
            return self.getTypedRuleContext(PasDocParser.ConstSectionContext,0)


        def varSection(self):
            return self.getTypedRuleContext(PasDocParser.VarSectionContext,0)


        def typeSection(self):
            return self.getTypedRuleContext(PasDocParser.TypeSectionContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(PasDocParser.ClassDeclarationContext,0)


        def interfaceDeclaration(self):
            return self.getTypedRuleContext(PasDocParser.InterfaceDeclarationContext,0)


        def recordDeclaration(self):
            return self.getTypedRuleContext(PasDocParser.RecordDeclarationContext,0)


        def arrayDeclaration(self):
            return self.getTypedRuleContext(PasDocParser.ArrayDeclarationContext,0)


        def setDeclaration(self):
            return self.getTypedRuleContext(PasDocParser.SetDeclarationContext,0)


        def enumDeclaration(self):
            return self.getTypedRuleContext(PasDocParser.EnumDeclarationContext,0)


        def implementationMethod(self):
            return self.getTypedRuleContext(PasDocParser.ImplementationMethodContext,0)


        def otherToken(self):
            return self.getTypedRuleContext(PasDocParser.OtherTokenContext,0)


        def getRuleIndex(self):
            return PasDocParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = PasDocParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declaration)
        try:
            self.state = 220
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 207
                self.docComment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.usesSection()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 209
                self.constSection()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 210
                self.varSection()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 211
                self.typeSection()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 212
                self.classDeclaration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 213
                self.interfaceDeclaration()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 214
                self.recordDeclaration()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 215
                self.arrayDeclaration()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 216
                self.setDeclaration()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 217
                self.enumDeclaration()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 218
                self.implementationMethod()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 219
                self.otherToken()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

